force-app/main/default/objects/TimeSheet/fields/Send_to_ATAK__c.field-meta.xml
<CustomField>
    <fullName>Send_to_ATAK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to ATAK</label>
    <type>Checkbox</type>
</CustomField>