force-app/main/default/objects/TimeSheet/fields/Total_Break_and_Absent_Time_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_and_Absent_Time_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Break and Absent Time (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>