force-app/main/default/objects/TimeSheet/fields/Total_Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Break_Time__c</fullName>
    <label>Total Break Time</label>
    <summarizedField>TimeSheetEntry.Break_Duration__c</summarizedField>
    <summaryForeignKey>TimeSheetEntry.TimeSheetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>