force-app/main/default/objects/TimeSheet/fields/Total_Hours_Minus_Breaks__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Minus_Breaks__c</fullName>
    <label>Total Hours Minus Breaks</label>
    <summarizedField>TimeSheetEntry.Total_Hours_Minus_Breaks__c</summarizedField>
    <summaryFilterItems>
        <field>TimeSheetEntry.Code_ATAK_Limbus__c</field>
        <operation>notEqual</operation>
        <value>KMAD, KMBP, KMAP, KMBD, KMEV</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TimeSheetEntry.Is_Kilometer_Allowance_Entry__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>TimeSheetEntry.TimeSheetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>