force-app/main/default/objects/TimeSheet/fields/Total_KM__c.field-meta.xml
<CustomField>
    <fullName>Total_KM__c</fullName>
    <label>Total KM</label>
    <summarizedField>Mileage_Entry__c.Calculated_Mileage__c</summarizedField>
    <summaryForeignKey>Mileage_Entry__c.Time_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>