force-app/main/default/objects/TimeSheet/fields/Total_Travel_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Travel_Time__c</fullName>
    <label>Total Travel Time</label>
    <summarizedField>TimeSheetEntry.Total_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>TimeSheetEntry.Type</field>
        <operation>equals</operation>
        <value>Travel Time</value>
    </summaryFilterItems>
    <summaryForeignKey>TimeSheetEntry.TimeSheetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>