force-app/main/default/objects/TimeSheet/fields/Working_Hours_in_Contract__c.field-meta.xml
<CustomField>
    <fullName>Working_Hours_in_Contract__c</fullName>
    <label>Working Hours in Contract</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>